--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,7 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
 }
 
 .profile-image {
@@ -20,6 +21,8 @@ body {
   border-radius: 50%;
   width: 48px;
   height: 48px;
+  margin-left: auto;
+  margin: 16px;
 }
 
 .logo {
@@ -27,7 +30,10 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  margin: 16px;
+
 }
+
 
 button {
   border: none;
@@ -35,6 +41,9 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  margin-left: auto;
+  margin: auto;
+  align-self: flex-end;
 }
 
 a {
@@ -45,4 +54,22 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 10px;
+
+}
+
+.container, .right-container{
+  display: flex;
+}
+
+.right-container{
+  align-items: center;
+  margin-left: auto;
+  gap: 8px;
+}
+
+.container{
+  align-items: center;
+gap: 10px;
 }
