--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,15 +1,15 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
-img {
-  width: 100px;
-  height: 100px;
-}
+
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
+  margin-top: 70px;
 }
 
 /* do not edit this footer */
@@ -23,4 +23,23 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.container{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 52px;
+
+}
+
+.container-item{
+  width: 200px;
+  height: 200px;
+  max-width: 200px;
+}
+
+img {
+  width: 100px;
+  height: 100px;
 }
